samples/_failures_safe/1761167285_c59d6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0c6a44d.c: In function ‘main’:
./samples/SAFE/__tmp_c0c6a44d.c:131: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c0c6a44d.c:130:5: error: expected declaration or statement at end of input
  130 |     if
      |     ^~
